--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,10 +1,13 @@
 .container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: var(--blue);
+	min-height: 100vh;
+	padding: 0 0.5rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	background-color: var(--blue);
+	main {
+		z-index: 2;
+	}
 }
